tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ca-central-1/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-2750114f"
                }
            ],
            "InternetGatewayId": "igw-0d19f665",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
