tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ca-central-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-f651d79c",
                    "NetworkAclId": "acl-b2ebcada",
                    "SubnetId": "subnet-a3f774d9"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-41305f2b",
                    "NetworkAclId": "acl-b2ebcada",
                    "SubnetId": "subnet-45e0c019"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-f751d79d",
                    "NetworkAclId": "acl-b2ebcada",
                    "SubnetId": "subnet-029bec6a"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-b2ebcada",
            "OwnerId": "167389268608",
            "Tags": [],
            "VpcId": "vpc-2750114f"
        }
    ]
}
